# gromada-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  application.cpp  application_model.cpp  application_view_model.cpp  cp866.cppm  data_exporters.cppm  framebuffer.cppm  imgui_utils.cpp  level_renderer.cppm  main.cpp  resource_reader.cpp  resources.cpp  utils.cppm
src/engine/: audio_engine.cppm  bounding_box.cppm  level_renderer.cppm  objects_view.cppm  world_components.cppm
src/gromada/: actions.ixx  data_exporters.cppm  game_resources.cppm  graphics_decoder.cppm  map.cppm  map_loader.cpp  map_saver.cpp  resource_reader.cpp  resource_reader.cppm  resources.cpp  resources.cppm  resources_sound.cppm  software_renderer.cppm  visual_logic.cpp  visual_logic.cppm
src/view_models/: map.cpp  map_properties.cpp  map_selector.cpp  sounds.cpp  vids.cpp
vcpkg-triplets/: x64-linux-libcxx.cmake
